Start Work on new Navbar and make sure it looks good on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,13 +13,13 @@ body {
     text-transform: uppercase;
     padding: 10px 25px;
     background: #FECE00;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
 .button-square {
     border:none;
     text-transform: uppercase;
-    padding: 15px 15px;
+    padding: 10px 10px;
     background: #FECE00;
     border-radius: 5px;
 }
@@ -52,7 +52,22 @@ body {
     border-bottom:0.5px solid #2D3332;
     border-right:0.5px solid #2D3332;
 }
+.top-strip {
+    width:100%;
+    height:20px;
+    background:#FECE00;
+}
+.top-strip-img {
+    height: 20px;
+    display: block;
+    margin: 0 auto;
+}
+.navbar-logo {
 
+}
+.nav-logo-img {
+    width: 260px;
+}
 .open {
     display: flex;
     transform: translateX(0);
@@ -64,8 +79,59 @@ body {
 
 .hamburger-container {
     display:inline-block;
+    position: absolute;
+    right: 17px;
+    top: 26px;
 }
 
+.account-pane-container {
+    width:100%;
+    display:flex;
+}
+
+.pane {
+    display:inline-block;
+    height:300px;
+    width:50%;
+    background:#F2ECEC;
+}
+
+.pane:hover {
+    -webkit-filter:none;
+    filter:none;
+}
+
+.pane-left {
+    background:url('img/cat1.jpg');
+    background-size: cover;
+    -webkit-filter: grayscale(1) opacity(.2);
+    filter:greyscale(1) opacity(.2);
+}
+
+.pane-right {
+    background:url('img/cat2.jpg');
+    background-size: cover;
+    -webkit-filter: grayscale(1) opacity(.2);
+    filter:greyscale(1) opacity(.2);
+}
+
+.service-box-container {
+    width:100%;
+    display:flex;
+}
+
+.service-box {
+    width:25%;
+    height:100px;
+}
+
+.service-box-odd {
+    background: #E3E3E3;
+}
+
+.service-box-even {
+    background: #D3CFCF;
+}
 
 @media (min-width: 992px) {
     body {
@@ -77,20 +143,26 @@ body {
     .hamburger {
         display: none;
     }
-
+    /* Top "Authorised Service Partner" Strip */
     .top-strip {
         width:100%;
         height:20px;
         background:#FECE00;
     }
-    
+    .top-strip-img {
+        height: 20px;
+        float: right;
+    }
+
+    /* Navigation Bar */
     .main-nav {
         display:flex;
         width:100%;
-        height:130px;
+        height:100px;
         background:white;
         align-items: center;
         justify-content: space-between;
+        box-shadow: 0 7px 4px 0 rgba(0, 0, 0, 0.19);
         // padding:0 10%;
     }
     
@@ -163,7 +235,54 @@ body {
         background: #D3CFCF;
     }
     
-
-
 }
-
+@media (min-width: 768px) {
+    .account-pane-container {
+        width:100%;
+        display:flex;
+    }
+    
+    .pane {
+        display:inline-block;
+        height:320px;
+        width:50%;
+        background:#F2ECEC;
+    }
+    
+    .pane:hover {
+        -webkit-filter:none;
+        filter:none;
+    }
+    
+    .pane-left {
+        background:url('img/cat1.jpg');
+        background-size: cover;
+        -webkit-filter: grayscale(1) opacity(.2);
+        filter:greyscale(1) opacity(.2);
+    }
+    
+    .pane-right {
+        background:url('img/cat2.jpg');
+        background-size: cover;
+        -webkit-filter: grayscale(1) opacity(.2);
+        filter:greyscale(1) opacity(.2);
+    }
+    
+    .service-box-container {
+        width:100%;
+        display:flex;
+    }
+    
+    .service-box {
+        width:25%;
+        height:180px;
+    }
+    
+    .service-box-odd {
+        background: #E3E3E3;
+    }
+    
+    .service-box-even {
+        background: #D3CFCF;
+    }
+}
